--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "tailwindcss": "^3.4.13"
   },
   "dependencies": {
-    "remixicon": "^4.3.0"
+    "remixicon": "^4.3.0",
+    "resend": "^6.2.0"
   }
 }
